Stop gap fix for threading problem in gnome_keyring_is_available()

* This will be fixed more fully in master.

https://bugzilla.gnome.org/show_bug.cgi?id=616512